added navbar and list

--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="fr">
+    
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monèse</title>
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div id="title">MONÈSE</div>
+
     <div id="results">
-
-        <p id="word">Bucolique</p>
-        <p id="type">Adjectif</p>
-        <p id="definition">Qui évoque la vie champêtre, les plaisirs simples de la campagne.</p>
-        <p id="example">Le décor bucolique de ce hameau semblait hors du temps.</p>
-
+        <p id="word"></p>
+        <p id="type"></p>
+        <div id="difficulty">
+            <div class="five-pointed-star"></div>
+        </div>
+        <p id="definition"></p>
+        <p id="example"></p>
         <button id="next-button">
-        J'en veux un autre !
+            J'en veux un autre !
         </button>
-
     </div>
+
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Accueil</a>
+            </li>
+            <li>
+                <a href="list.html">Liste des mots</a>
+            </li>
+        </ul>
+    </nav>
 
     <script src="./script.js"></script>
 </body>
+
 </html>
